--- a/util/build.gradle
+++ b/util/build.gradle
@@ -8,7 +8,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -24,32 +24,41 @@ android {
         }
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //微信SDK
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+
+    //支付宝SDK
+    api(name: 'alipaySdk-15.6.0-20190226104104-noUtdid', ext: 'aar')
 
     //zxing
-    implementation 'com.google.zxing:core:3.3.0'
+    api 'com.google.zxing:core:3.3.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
-    implementation 'com.squareup.okio:okio:1.12.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    api 'com.squareup.okhttp3:okhttp:3.7.0'
+    api 'com.squareup.okio:okio:1.12.0'
+    api 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.github.bumptech.glide:glide:+'//glide图片
+    api 'com.github.bumptech.glide:glide:+'//glide图片
     annotationProcessor 'com.github.bumptech.glide:compiler:+'
 
-    implementation 'org.greenrobot:eventbus:3.0.0'//Eventbus
+    api 'org.greenrobot:eventbus:3.0.0'//Eventbus
 
     //黄油刀
-    implementation 'com.jakewharton:butterknife:8.8.1'
+    api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
