--- a/util/build.gradle
+++ b/util/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 
     //支付宝SDK
-    implementation(name: 'alipaySdk-15.6.0-20190226104104-noUtdid', ext: 'aar')
+    compileOnly(name: 'alipaySdk-15.6.0-20190226104104-noUtdid', ext: 'aar')
 
     //zxing
     api 'com.google.zxing:core:3.3.0'
